--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "@types/node": "25.2.3",
     "@types/react": "19.2.14",
-    "typescript": "^5"
+    "typescript": "^5",
+    "tailwindcss": "^3.5.0",
+    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.14"
   }
 }
